# apps/api/src/matching/dto.ts
@@ -1,0 +1,13 @@
+import { SwipeAction } from "@datechain/types";
+import { ApiProperty } from "@nestjs/swagger";
+import { IsEnum, IsUUID } from "class-validator";
+
+export class SwipeDto {
+  @ApiProperty({ format: "uuid" })
+  @IsUUID()
+  targetId!: string;
+
+  @ApiProperty({ enum: SwipeAction })
+  @IsEnum(SwipeAction)
+  action!: SwipeAction;
+}
